<resources>
    <string name="app_name">Busog</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title">Busog</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="welcome_to_busog">Welcome to Busog!</string>
    <string name="create_meal_plan">Create Meal Plan</string>
    <string name="busogCAPS">BUSOG</string>
    <string name="permission_rationale_location">Access to the location service is required to display your current location on the map</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Busog\'.</string>
    <string name="permission_required_toast">Location permission is required for the map service.</string>
    <string name="nearby_restaurants_label">Nearby Restaurants: </string>
    <string name="recent_meals_label">Recent Meals: </string>
    <string name="distance_label">Distance: </string>
    <string name="meal_contents_label">Meal Contents: </string>
    <string name="price_label">Price: </string>
    <string name="total_num_items_label">Total # of Items: </string>
    <string name="meal_summary_title">Meal Summary</string>
    <string name="total_label">Total: Php </string>
    <string name="quantity_label">Quantity: </string>
    <string name="home_title">Home</string>
    <string name="map_title">Map</string>
    <string name="meal_creation">Meal Creation</string>
    <string name="budget_hint">0.00</string>
    <string name="restaurants">Restaurants</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity:</string>
    <string name="ala_carte">Ala Carte</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="budget">Budget:</string>
    <string name="currency">Php</string>
    <string name="empty">--</string>
    <string name="restaurant">Restaurant</string>
    <string name="quantity_hint">0</string>
    <string name="meal_summary">Meal Summary</string>
    <string name="remove"><u>Remove</u></string>
    <string name="set_budget">Set Budget</string>
    <string name="save">Save</string>
</resources>

